[package]
name = "bitcoin_hashes"
version = "0.9.4"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
description = "Hash functions used by rust-bitcoin which support rustc 1.29.0"
homepage = "https://github.com/rust-bitcoin/bitcoin_hashes/"
repository = "https://github.com/rust-bitcoin/bitcoin_hashes/"
documentation = "https://docs.rs/bitcoin_hashes/"
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"

[lib]
name = "bitcoin_hashes"
path = "src/lib.rs"

[features]
default = [ "std" ]
std = []
serde-std = ["serde/std"]
unstable = []  # for benchmarking

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
schemars = { version = "0.8.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
jsonschema-valid = "0.4.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
