[package]
name = "groestlcoin_hashes"
version = "0.10.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
description = "Hash functions used by rust-groestlcoin which support rustc 1.29.0"
homepage = "https://github.com/Groestlcoin/groestlcoin_hashes/"
repository = "https://github.com/Groestlcoin/groestlcoin_hashes/"
documentation = "https://docs.rs/groestlcoin_hashes/"
keywords = [ "crypto", "groestlcoin", "hash", "digest" ]
readme = "README.md"

[lib]
name = "groestlcoin_hashes"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# If you disable std, you can still use a Write trait via the core2 feature.
# You can also use ToHex via the alloc feature, as it requires Vec/String.
# And you can still just disable std by disabling default features, without enabling these two.
alloc = ["core2/alloc"]
serde-std = ["serde/std"]
unstable = []  # for benchmarking

[dependencies]
# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
serde = { version = "1.0", default-features = false, optional = true }
# Can only be used with "std" enabled.
schemars = { version = "<=0.8.3", optional = true }
# Only enable this if you explicitly do not want to use an allocator, otherwise enable "alloc".
core2 = { version = "0.3.0", optional = true, default_features = false }
groestl = { version = "0.10.0", default_features = false }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
