[package]
name = "bitcoin_hashes-fuzz"
version = "0.0.1"
authors = ["copied from rust-bitcoin"]
publish = false

[package.metadata]
cargo-fuzz = true

[features]
honggfuzz_fuzz = ["honggfuzz"]

[dependencies]
honggfuzz = { version = "0.5", optional = true }
bitcoin_hashes = { path = ".." }
rust-crypto = "0.2"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "sha1"
path = "fuzz_targets/sha1.rs"

[[bin]]
name = "ripemd160"
path = "fuzz_targets/ripemd160.rs"

[[bin]]
name = "sha256"
path = "fuzz_targets/sha256.rs"

