[package]
name = "schemars"
version = "0.1.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.groestlcoin_hashes]
path = "../.."
features = ['schemars', 'serde']
[dependencies]
jsonschema-valid = "^0.4.0"
serde = { version = "1.0", default-features = false}
schemars = { version = "<=0.8.3"}
serde_test = "1.0"
serde_json = "1.0"
